# oncotraj

./: .gitignore  .pre-commit-config.yaml  LABELING_GUIDELINES.md  LICENSE  README.md  leaderboard.md  pyproject.toml
.github/workflows/: tests.yml
eval_reports/: logistic_taskA.json  majority_taskA.json  random_forest_taskA.json  xgboost_taskA.json
scripts/: build_dataset.py  build_splits.py  make_figures.py  train_baseline.py  train_lstm.py  train_transformer.py
src/oncotraj/: __init__.py  metrics.py  schemas.py  splits.py
src/oncotraj/baselines/: __init__.py
src/oncotraj/data/: __init__.py  splits.py
src/oncotraj/eval/: __init__.py  cli.py  leaderboard.py  metrics.py  report.py
src/oncotraj/models/: __init__.py  base.py  features.py  logistic.py  lstm.py  majority.py  random_forest.py  transformer.py  xgb.py
src/oncotraj/parsers/: README.md  __init__.py  cbioportal.py  common.py  genie.py  synthetic.py
src/oncotraj/parsers/papers/: README.md  __init__.py  _base.py  _example_synthetic.py  chmielecki_2023_aura3.py  chmielecki_2023_flaura.py  tan_2024_oscillate.py
tests/: conftest.py  test_build_dataset.py  test_cbioportal.py  test_chmielecki_2023_aura3.py  test_chmielecki_2023_flaura.py  test_eval.py  test_genie.py  test_lstm.py  test_models.py  test_papers_framework.py  test_smoke.py  test_splits.py  test_tan_2024_oscillate.py  test_transformer.py
