[project]
name = "oncotraj"
version = "0.1.0"
description = "OncoTraj: a longitudinal benchmark for resistance prediction in EGFR+ NSCLC on osimertinib."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Abhijoy Sarkar" },
    { name = "Aarchi Singh Thakur" },
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.30",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "joblib>=1.3",
    "mlflow>=2.10",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "pdfplumber>=0.11",
    "pyarrow>=15",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "transformers>=4.40",
    "xgboost>=2.0",
]

[project.urls]
Repository = "https://github.com/acebot712/oncotraj"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oncotraj"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
